update skills and add education and work to top menu bar

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="#home">Home</a></li>
                         <li class="scroll"><a href="#skills">Skills</a></li>
+                        <li class="scroll"><a href="#education-work">Education & Work</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="scroll"><a href="#about">About</a></li>
                         <li class="scroll"><a href="#get-in-touch">Contact</a></li>                        
@@ -68,7 +69,6 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Skills</h2>
-                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
 
             <div class="row">
@@ -76,10 +76,10 @@
                     <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms">
                         <div class="media service-box">
                             <div class="pull-left">
-                                <i class="fa fa-bars"></i>
+                                <i class="fa fa-code"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">HTML5<br />CSS3/SASS <br /> Responsive Design </h4>
+                                <h4 class="media-heading">HTML5<br />CSS3 <br /> Responsive Design </h4>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -87,10 +87,10 @@
                     <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
                         <div class="media service-box">
                             <div class="pull-left">
-                                <i class="fa fa-code"></i>
+                                <i class="fa fa-bars"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">JavaScript <br /> AngularJS <br /> node.js</h4>
+                                <h4 class="media-heading">jinja2 <br /> jQuery <br /> Bootstrap</h4>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -101,8 +101,8 @@
                                 <i class="fa fa-cogs"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">Ruby <br /> Rails <br /> Sinatra</h4>
-                                <p>Quick and elegant server-side scripting</p>
+                                <h4 class="media-heading"> <br>Ruby & Rails <br> Python & Django <br /> </h4>
+                                <br>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -113,7 +113,7 @@
                                 <i class="fa fa-code-fork"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">Heroku <br /> Amazon Web Services <br /> Cloud IDE's</h4>
+                                <h4 class="media-heading">Heroku <br /> Google App Engine <br /> Cloud-based IDE's</h4>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -124,7 +124,7 @@
                                 <i class="fa fa-terminal"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">GitHub <br /> RSpec <br /> Capybara </h4>
+                                <h4 class="media-heading">GitHub <br> Command Line <br> Code Style Conventions</h4>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -135,70 +135,68 @@
                                 <i class="fa fa-database"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">MySQL <br /> PostgreSQL</h4>
-                                <p>Backed by some of the biggest names in the industry, Firefox OS is an open platform that fosters greater</p>
+                                <h4 class="media-heading"><br> PostgreSQL</h4>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
                 </div>
-            </div><!--/.row-->    
-            <div class="row">
-                <div class="section-header">
-                    <h2 class="section-title text-center wow fadeInDown"><br /> Education <br />&<br /> Work History</h2>
-                    <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-                </div>
-                <div class="col-md-12">      
-                    <h3 class="column-title">Our History</h3>
-                    <div role="tabpanel">
-                        <ul class="nav main-tab nav-justified" role="tablist">
-                            <li role="presentation" class="active">
-                                <a href="#tab1" role="tab" data-toggle="tab" aria-controls="tab1" aria-expanded="true">2010</a>
-                            </li>
-                            <li role="presentation">
-                                <a href="#tab2" role="tab" data-toggle="tab" aria-controls="tab2" aria-expanded="false">2011</a>
-                            </li>
-                            <li role="presentation">
-                                <a href="#tab3" role="tab" data-toggle="tab" aria-controls="tab3" aria-expanded="false">2012</a>
-                            </li>
-                            <li role="presentation">
-                                <a href="#tab4" role="tab" data-toggle="tab" aria-controls="tab4" aria-expanded="false">2013</a>
-                            </li>
-                            <li role="presentation">
-                                <a href="#tab5" role="tab" data-toggle="tab" aria-controls="tab5" aria-expanded="false">2014</a>
-                            </li>
-                            <li role="presentation">
-                                <a href="#tab6" role="tab" data-toggle="tab" aria-controls="tab6" aria-expanded="false">2015</a>
-                            </li>
-                            <li role="presentation">
-                                <a href="#tab7" role="tab" data-toggle="tab" aria-controls="tab7" aria-expanded="false">2016</a>
-                            </li>
-                        </ul>
-                        <div id="tab-content" class="tab-content">
-                            <div role="tabpanel" class="tab-pane fade active in" id="tab1" aria-labelledby="tab1">
-                                <p>This should be tab 1.</p>
-                            </div>
-                            <div role="tabpanel" class="tab-pane fade" id="tab2" aria-labelledby="tab2">
-                                <p>This should be tab 2.</p>
-                            </div>
-                            <div role="tabpanel" class="tab-pane fade" id="tab3" aria-labelledby="tab3">
-                                <p>This should be tab 3.</p>
-                            </div>
-                            <div role="tabpanel" class="tab-pane fade" id="tab4" aria-labelledby="tab4">
-                                <p>This should be tab 4.</p>
-                            </div>
-                            <div role="tabpanel" class="tab-pane fade" id="tab5" aria-labelledby="tab5">
-                                <p>This should be tab 5.</p>
-                            </div>
-                            <div role="tabpanel" class="tab-pane fade" id="tab6" aria-labelledby="tab6">
-                                <p>This should be tab 6.</p>
-                            </div>
-                            <div role="tabpanel" class="tab-pane fade" id="tab7" aria-labelledby="tab7">
-                                <p>This should be tab 7.</p>
-                            </div>
+            </div><!--/.row-->  
+        </div>
+    </section>
+ 
+    <section id="education-work"> 
+        <div class="row">
+            <div class="section-header">
+                <h2 class="section-title text-center wow fadeInDown"><br /> Education <br />&<br /> Work 
+            </div>
+            <div class="col-md-12">      
+                <div role="tabpanel">
+                    <ul class="nav main-tab nav-justified" role="tablist">
+                        <li role="presentation" class="active">
+                            <a href="#tab1" role="tab" data-toggle="tab" aria-controls="tab1" aria-expanded="true">2010</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#tab2" role="tab" data-toggle="tab" aria-controls="tab2" aria-expanded="false">2011</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#tab3" role="tab" data-toggle="tab" aria-controls="tab3" aria-expanded="false">2012</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#tab4" role="tab" data-toggle="tab" aria-controls="tab4" aria-expanded="false">2013</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#tab5" role="tab" data-toggle="tab" aria-controls="tab5" aria-expanded="false">2014</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#tab6" role="tab" data-toggle="tab" aria-controls="tab6" aria-expanded="false">2015</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#tab7" role="tab" data-toggle="tab" aria-controls="tab7" aria-expanded="false">2016</a>
+                        </li>
+                    </ul>
+                    <div id="tab-content" class="tab-content">
+                        <div role="tabpanel" class="tab-pane fade active in" id="tab1" aria-labelledby="tab1">
+                            <p>This should be tab 1.</p>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="tab2" aria-labelledby="tab2">
+                            <p>This should be tab 2.</p>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="tab3" aria-labelledby="tab3">
+                            <p>This should be tab 3.</p>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="tab4" aria-labelledby="tab4">
+                            <p>This should be tab 4.</p>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="tab5" aria-labelledby="tab5">
+                            <p>This should be tab 5.</p>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="tab6" aria-labelledby="tab6">
+                            <p>This should be tab 6.</p>
+                        </div>
+                        <div role="tabpanel" class="tab-pane fade" id="tab7" aria-labelledby="tab7">
+                            <p>This should be tab 7.</p>
                         </div>
                     </div>
-                </div>
-
                 </div>
             </div>
         </div>
