fix styling on heading

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->       
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
@@ -45,7 +44,6 @@
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="#home">Home</a></li>
                         <li class="scroll"><a href="#skills">Skills</a></li>
-                        <li class="scroll"><a href="#education-work">Education & Work</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
                         <li class="scroll"><a href="#about">About</a></li>
                         <li class="scroll"><a href="#get-in-touch">Contact</a></li>                        
@@ -58,9 +56,9 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown"><img src="images/kev-win2.png" style="height: 45%; width: 45%; min-height: 45px; min-width: 330px "><br /><br /></h2>
-                <br />
-                <p class="text-center wow fadeInDown">Web Developer</p>
+                    <h1 class="section-title text-center wow fadeInDown" style="text-transform:none; font-weight: 400; font-size:70px">Kevin Windisch</h1>
+                <br><br><br>
+                <h4 class="text-center wow fadeInDown">Web Developer</h4>
             </div>
         </div>
     </section>
@@ -144,7 +142,7 @@
         </div>
     </section>
  
-    <section id="education-work"> 
+    <!--<section id="education-work"> 
         <div class="row">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown"><br /> Education <br />&<br /> Work 
@@ -200,7 +198,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <section id="portfolio">
         <div class="container">
