--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
                         <li class="scroll active"><a href="#home">Home</a></li>
                         <li class="scroll"><a href="#skills">Skills</a></li>
                         <li class="scroll"><a href="#portfolio">Portfolio</a></li>
-                        <li class="scroll"><a href="#about">About</a></li>
-                        <li class="scroll"><a href="#get-in-touch">Contact</a></li>                        
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -56,9 +54,10 @@
     <section id="features">
         <div class="container">
             <div class="section-header">
-                    <h1 class="section-title text-center wow fadeInDown" style="text-transform:none; font-weight: 400; font-size:70px">Kevin Windisch</h1>
-                <br><br><br>
+                    <h1 class="section-title text-center wow fadeInDown" style="text-transform:none; font-weight: 400; font-size:70px">Kevin Windisch<br><br></h1><br><br><br>
                 <h4 class="text-center wow fadeInDown">Web Developer</h4>
+                <h4 class="text-center wow fadeInDown">Downers Grove, IL</h4>
+                <h4 class="text-center wow fadeInDown"><a href="mailto:kevin@kevw.in">kevin@kevw.in</a>
             </div>
         </div>
     </section>
@@ -99,7 +98,7 @@
                                 <i class="fa fa-cogs"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"> <br>Ruby & Rails <br> Python & Django <br /> </h4>
+                                <h4 class="media-heading"> <br>Ruby & Rails <br> Python<br></h4>
                                 <br>
                             </div>
                         </div>
@@ -141,222 +140,71 @@
             </div><!--/.row-->  
         </div>
     </section>
- 
-    <!--<section id="education-work"> 
-        <div class="row">
-            <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown"><br /> Education <br />&<br /> Work 
-            </div>
-            <div class="col-md-12">      
-                <div role="tabpanel">
-                    <ul class="nav main-tab nav-justified" role="tablist">
-                        <li role="presentation" class="active">
-                            <a href="#tab1" role="tab" data-toggle="tab" aria-controls="tab1" aria-expanded="true">2010</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#tab2" role="tab" data-toggle="tab" aria-controls="tab2" aria-expanded="false">2011</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#tab3" role="tab" data-toggle="tab" aria-controls="tab3" aria-expanded="false">2012</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#tab4" role="tab" data-toggle="tab" aria-controls="tab4" aria-expanded="false">2013</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#tab5" role="tab" data-toggle="tab" aria-controls="tab5" aria-expanded="false">2014</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#tab6" role="tab" data-toggle="tab" aria-controls="tab6" aria-expanded="false">2015</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#tab7" role="tab" data-toggle="tab" aria-controls="tab7" aria-expanded="false">2016</a>
-                        </li>
-                    </ul>
-                    <div id="tab-content" class="tab-content">
-                        <div role="tabpanel" class="tab-pane fade active in" id="tab1" aria-labelledby="tab1">
-                            <p>This should be tab 1.</p>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="tab2" aria-labelledby="tab2">
-                            <p>This should be tab 2.</p>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="tab3" aria-labelledby="tab3">
-                            <p>This should be tab 3.</p>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="tab4" aria-labelledby="tab4">
-                            <p>This should be tab 4.</p>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="tab5" aria-labelledby="tab5">
-                            <p>This should be tab 5.</p>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="tab6" aria-labelledby="tab6">
-                            <p>This should be tab 6.</p>
-                        </div>
-                        <div role="tabpanel" class="tab-pane fade" id="tab7" aria-labelledby="tab7">
-                            <p>This should be tab 7.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>-->
-
+    <br><br><br><br>
     <section id="portfolio">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Portfolio</h2>
-                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <p class="text-center">Hover over each thumbnail to view specifics.</p>
             </div>
 
             <div class="text-center">
                 <ul class="portfolio-filter">
                     <li><a class="active" href="#" data-filter="*">All Works</a></li>
-                    <li><a href="#" data-filter=".creative">Creative</a></li>
-                    <li><a href="#" data-filter=".corporate">Business</a></li>
-                    <li><a href="#" data-filter=".film">Film Photography</a></li>
+                    <li><a href="#" data-filter=".ruby">Ruby</a></li>
+                    <li><a href="#" data-filter=".python">Python</a></li>
+                   <!--<li><a href="#" data-filter=".photo">Photography</a></li>-->
                 </ul><!--/#portfolio-filter-->
             </div>
 
             <div class="portfolio-items">
-                <div class="portfolio-item creative">
+                <div class="portfolio-item ruby">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/github-logo-ruby.png">
                         <div class="portfolio-info">
-                            <h3>Portfolio Item 1</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <h3>Survivr</h3>
+                            <p>An app that simulates the television show Survivor</p>
+                            <a class="preview" href="https://github.com/cabbagebeard/survivr" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div><!--/.portfolio-item-->
 
-                <div class="portfolio-item corporate film">
+                <div class="portfolio-item python">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/blog.png">
                         <div class="portfolio-info">
-                            <h3>Portfolio Item 2</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <h3>Blog</h3>
+                            <p>Basic blog built using webapp2 and jinja2.</p>
+                            <a class="preview" href="http://basic-blog-147418.appspot.com/" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div><!--/.portfolio-item-->
 
-                <div class="portfolio-item creative">
+                <div class="portfolio-item ruby">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/github-logo-ruby.png">
                         <div class="portfolio-info">
-                            <h3>Portfolio Item 3</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <h3>ToyCity</h3>
+                            <p>Interacts with a CSV database, reflecting the structure of ActiveRecord.</p>
+                            <a class="preview" href="http://github.com/cabbagebeard/rbnd-toycity-part4" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div><!--/.portfolio-item-->
 
-                <div class="portfolio-item corporate">
+                <div class="portfolio-item ruby">
                     <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
+                        <img class="img-responsive" src="images/portfolio/recipe-makr.png">
                         <div class="portfolio-info">
-                            <h3>Portfolio Item 4</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div><!--/.portfolio-item-->
-
-                <div class="portfolio-item creative film">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Portfolio Item 5</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div><!--/.portfolio-item-->
-
-                <div class="portfolio-item corporate">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Portfolio Item 5</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div><!--/.portfolio-item-->
-
-                <div class="portfolio-item creative film">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Portfolio Item 7</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div><!--/.portfolio-item-->
-
-                <div class="portfolio-item corporate">
-                    <div class="portfolio-item-inner">
-                        <img class="img-responsive" src="images/portfolio/empty.jpg" alt="">
-                        <div class="portfolio-info">
-                            <h3>Portfolio Item 8</h3>
-                            Lorem Ipsum Dolor Sit
-                            <a class="preview" href="images/portfolio/full.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                            <h3>Recipe Makr</h3>
+                            <p>Recipe sharing blog, built with Rails and Bootstrap</p>
+                            <a class="preview" href="recipe-makr.herokuapp.com" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div><!--/.portfolio-item-->
             </div>
         </div><!--/.container-->
     </section><!--/#portfolio-->
-
-    <section id="about">
-        <div class="container">
-
-            <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">About Me</h2>
-                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-            </div>
-        </div>
-    </section><!--/#about-->
-
-    <section id="get-in-touch">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">Contact Me!</h2>
-            </div>
-        </div>
-    </section><!--/#get-in-touch-->
-
-
-    <section id="contact">
-        <div style="height:650px"</div>
-        <div class="container-wrapper">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4 col-sm-offset-4">
-                        <div class="contact-form">
-
-                            <form id="main-contact-form" name="contact-form" method="post" action="#">
-                                <div class="form-group">
-                                    <input type="text" name="name" class="form-control" placeholder="Name" required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" name="email" class="form-control" placeholder="Email" required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-                                </div>
-                                <div class="form-group">
-                                    <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Send Message</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!--/#bottom-->
-
+    <br><br><br><br>
     <footer id="footer">
         <div class="container">
             <div class="row">
@@ -365,8 +213,6 @@
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
-                        <li><a href="https://www.facebook.com/kevin.windisch1" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="http://www.lomography.com/homes/cabbagebeard/" target="_blank"><i class="fa fa-camera-retro"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/kevinwindisch" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://github.com/cabbagebeard" target="_blank"><i class="fa fa-github"></i></a></li>
                     </ul>
