update portfolio section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <i class="fa fa-code"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">HTML5<br />CSS3 <br /> Responsive Design </h4>
+                                <h4 class="media-heading">HTML5<br>CSS3 <br> Responsive Design </h4>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -87,7 +87,7 @@
                                 <i class="fa fa-bars"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">jinja2 <br /> jQuery <br /> Bootstrap</h4>
+                                <h4 class="media-heading">jQuery & Bootstrap <br> KnockoutJS <br> Flask</h4>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -98,7 +98,7 @@
                                 <i class="fa fa-cogs"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"> <br>Ruby & Rails <br> Python<br></h4>
+                                <h4 class="media-heading">Ruby<br > Python <br> JavaScript <br></h4>
                                 <br>
                             </div>
                         </div>
@@ -153,6 +153,7 @@
                     <li><a class="active" href="#" data-filter="*">All Works</a></li>
                     <li><a href="#" data-filter=".ruby">Ruby</a></li>
                     <li><a href="#" data-filter=".python">Python</a></li>
+                    <li><a href="#" data-filter=".javascript">JavaScript</a></li>
                    <!--<li><a href="#" data-filter=".photo">Photography</a></li>-->
                 </ul><!--/#portfolio-filter-->
             </div>
@@ -163,7 +164,7 @@
                         <img class="img-responsive" src="images/portfolio/github-logo-ruby.png">
                         <div class="portfolio-info">
                             <h3>Survivr</h3>
-                            <p>An app that simulates the television show Survivor</p>
+                            <p>An app that simulates the television show Survivor.</p>
                             <a class="preview" href="https://github.com/cabbagebeard/survivr" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
@@ -173,7 +174,7 @@
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/blog.png">
                         <div class="portfolio-info">
-                            <h3>Blog</h3>
+                            <h3>Multi-User Blog</h3>
                             <p>Basic blog built using webapp2 and jinja2.</p>
                             <a class="preview" href="http://basic-blog-147418.appspot.com/" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
@@ -196,8 +197,30 @@
                         <img class="img-responsive" src="images/portfolio/recipe-makr.png">
                         <div class="portfolio-info">
                             <h3>Recipe Makr</h3>
-                            <p>Recipe sharing blog, built with Rails and Bootstrap</p>
-                            <a class="preview" href="recipe-makr.herokuapp.com" target="_blank"><i class="fa fa-eye"></i></a>
+                            <p>Recipe sharing blog, built with Rails and Bootstrap.</p>
+                            <a class="preview" href="http://recipe-makr.herokuapp.com" target="_blank"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+
+                <div class="portfolio-item python">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/github-logo-py.png">
+                        <div class="portfolio-info">
+                            <h3>Instrument Catalog</h3>
+                            <p>Categories and respective items, featuring third-party authentication.</p>
+                            <a class="preview" href=https://github.com/cabbagebeard/instrument-catalog" target="_blank"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+
+                <div class="portfolio-item javascript">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/github-logo-js.png">
+                        <div class="portfolio-info">
+                            <h3>Customized Map of Austin</h3>
+                            <p>A map of custom markers for a trip I was planning.</p>
+                            <a class="preview" href="https://cabbagebeard.github.io/austin-map/" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div><!--/.portfolio-item-->
@@ -209,11 +232,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2016 Kevin Windisch
+                    &copy; 2017 Kevin Windisch
                 </div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
-                        <li><a href="https://www.linkedin.com/in/kevinwindisch" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/kevin-windisch" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://github.com/cabbagebeard" target="_blank"><i class="fa fa-github"></i></a></li>
                     </ul>
                 </div>
