--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <div class="portfolio-info">
                             <h3>Instrument Catalog</h3>
                             <p>Categories and respective items, featuring third-party authentication.</p>
-                            <a class="preview" href="https://github.com/cabbagebeard/instrument-catalog" target="_blank"><i class="fa fa-eye"></i></a>
+                            <a class="preview" href="http://ec2-54-84-202-181.compute-1.amazonaws.com/" target="_blank"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div><!--/.portfolio-item-->
