Add Travel Wishlist and Book Club

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <i class="fa fa-cogs"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">Ruby<br > Python <br> JavaScript <br></h4>
+                                <h4 class="media-heading">Ruby & Rails <br > Python <br> JavaScript <br></h4>
                                 <br>
                             </div>
                         </div>
@@ -159,6 +159,28 @@
             </div>
 
             <div class="portfolio-items">
+                <div class="portfolio-item ruby">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/travel-wishlist.png">
+                        <div class="portfolio-info">
+                            <h3>Travel Wishlist Blog</h3>
+                            <p>Rails blog featuring admin panel.</p>
+                            <a class="preview" href="https://travel-wishlist.herokuapp.com/" target="_blank"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+
+                <div class="portfolio-item ruby">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/github-logo-ruby.png">
+                        <div class="portfolio-info">
+                            <h3>Book Club(Work in progress)</h3>
+                            <p>Social Media web app built using Rails.</p>
+                            <a class="preview" href="https://github.com/cabbagebeard/book-club" target="_blank"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+
                 <div class="portfolio-item ruby">
                     <div class="portfolio-item-inner">
                         <img class="img-responsive" src="images/portfolio/github-logo-ruby.png">
